--- a/cancer_analysis_restructured_n.ipynb
+++ b/cancer_analysis_restructured_n.ipynb
@@ -9,8 +9,12 @@
       "source": [
         "# Cancer Patient Analysis: Air Pollution & Disease Correlation\n",
         "\n",
-        "This notebook presents a full machine learning workflow with data quality checks, data leakage detection, data cleaning, model comparison, hyperparameter tuning, and robust validation.\n",
-        "\n",
+        "This project focuses on developing a machine learning classification system to predict cancer risk levels (Low, Medium, High) based on patient data including air pollution exposure and genetic factors. \n",
+        "The dataset contains approximately 1,000 patient records with 23 features such as age, air pollution index, genetic risk, smoking habits, and various medical symptoms. \n",
+        "We implemented and compared three classification algorithms: Logistic Regression for baseline linear modeling, K-Nearest Neighbors (KNN) for instance-based learning, and Support Vector Machines (SVM) for optimal hyperplane separation. \n",
+        "The complete workflow includes data preprocessing, data leakage removal, and hyperparameter optimization using GridSearchCV. \n",
+        "\n"
+
         "**Dataset Source:** Cancer Patients and Air Pollution Dataset\n"
       ]
     },
